tests/snapshots/run_wpt_conformance__onnx_neg_float16_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "neg.https.any.js",
    "neg float16 1D tensor",
    "onnx",
    "PASS",
)
